# CPP

./: .clang-format  .clang-tidy  .clang_format  .gitignore  .mergify.yml  BASIC.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  commit_msg.txt  contributing.md  cos  readme.md
.circleci/: config.yml
.github/: codeowners  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql_analysis.yml  cpp.yml  format_nama_file.sh
.linter/: file_linter.py
Kriptografi/: CMakeLists.txt  caesar cipher.cpp  readme.md
algorithm/algoritma_greedy/: CMakeLists.txt  huffman.cpp  knapsack.cpp
algorithm/bit_manipulation/: count_of_set_bits.cpp  flip_count_bits.cpp  hamming_distance.cpp  lsb.cpp  msb.cpp  powerSet.cpp  tempCodeRunnerFile.cpp  test
algorithm/dynamic_programming/: CMakeLists.txt  angka_armstrong.cpp  kadane.cpp  subset_sum.cpp  word_break.cpp
algorithm/hashing/: CMakeLists.txt  chaining.cpp
algorithm/search algorithm/: linear search.cpp
algorithm/search_algorithm/: CMakeLists.txt  binary_search.cpp  linear_search.cpp
algorithm/sorting/: CMakeLists.txt  bead_sort.cpp  bubblesort.cpp  bubblesort_doubly_linkedlist.cpp  bucket_sort.cpp  cmakelists.txt  gnome_sort.cpp  insertion_sort.cpp  pigeonhole_sort.cpp  selection_sort.cpp  snail_sort.cpp
algorithm/spliting/: string_split.cpp
artificial_intelligence/: CMakeLists.txt  adaline_learning.cpp  k_nearest_neighbour.cpp
backtracking/: cmakelists.txt  knight_tour.cpp  minimax.cpp  n_queens.cpp  rat_in_maze.cpp  subarray_sum.cpp  sudoku_solve.cpp  sudoku_solver.cpp  wildcard_matching.cpp
basic/: CMakeLists.txt  README.md  Smallest divisible number  readme.md
basic/01_Introduction(Perkenalan)/: README.md  hello_world.cpp
basic/01_Perkenalan/: README.md
basic/01_introduction/: README.md
basic/02_Input-Output/: README.md  input_output.cpp
basic/02_Tipe-data-dan-variabel/: README.md
basic/02_variable_datatype/: CMakeLists.txt  readme.md
basic/03_TypeData-Variable(TipeData_dan_Variabel)/: README.md
basic/03_pointer_reference/: README.md
basic/04_Pointer_reference/: README.md
basic/04_operator/: README.md  operator_bitwise.cpp  readme.md
basic/05_Kondisi/: conditional.cpp  ternary.cpp
basic/05_Operator/: README.md  operator-logika.cpp
basic/05_conditional/: README.md
basic/06_Conditional(Kondisi)/: CMakeLists.txt  README.md
basic/06_looping/: README.md  do_while.cpp  for.cpp
basic/07_Looping(Perulangan)/: README.md  break.cpp  continue.cpp
basic/07_array/: README.md  array_cpp.cpp  readme.md
basic/08_Array/: README.md
basic/08_string/: README.md  menggunakan_array.cpp
basic/09_Multidimensional-array/: multidimensional_array.cpp
basic/09_String/: README.md  gaya_c.cpp
basic/09_multidimensional_array/: README.md
basic/10_Input-output/: README.md
basic/10_Multidimensional-array/: README.md
basic/10_input_output/: README.md  input_output.cpp
basic/11_Constant-literal/: README.md  constanta_const.cpp  constanta_define.cpp
basic/11_constant_literal/: README.md
basic/12_Funtion(Fungsi)/: README.md  fungsi_return.cpp
basic/12_fungsi/: README.md  fungsi.cpp  fungsi_return.cpp  readme.md
basic/13_dynamic_array/: README.md  dynamic_array.cpp  readme.md
basic/14_class/: README.md  kelas.cpp  readme.md
basic/15_struct/: README.md  contoh_struct.cpp  readme.md
basic/16_Vector/: Modifiers.pptx  README.MD  README.md  basic_vector.cpp  vector basic.cpp  vector-access.cpp  vector-modifiers.cpp
basic/16_vector_basic/: vector_basic.cpp
basic/17_FuntionOverloading/: FunctionOverloading.cpp
basic/17_function_overload/: Readme.md  function_overloading.cpp  readme.md
basic/18_Menulis pada file eksternal/: Menulis-file-eksternal1.cpp  Menulis-file-eksternal2.cpp  file.txt
basic/18_function_rekursif/: readme.md  rekursif.cpp
basic/19_Membaca pada file eksternal/: Membaca-file-eksternal1.cpp  Membaca-file-eksternal2.cpp  Membaca-file-eksternal3.cpp  Membaca-file-eksternal4.cpp  README.md  file.txt
basic/1_introduction/: README.md  hello_world.cpp
basic/2_variable_datatype/: README.md  variabel.cpp
basic/3_operator/: README.md
basic/3_pointer_reference/: README.md  pointer.cpp
basic/4_conditional/: conditional.cpp  ternary.cpp
basic/4_operator/: README.md
basic/5_conditional/: README.md  conditional.cpp  ternary.cpp
basic/5_looping/: README.md  while.cpp
basic/6_break_continue/: README.md  cpp_break.cpp  cpp_continue.cpp
basic/6_looping/: README.md
basic/7_array/: README.md  array_cpp.cpp
basic/7_menentukan_nilai_remidi_dan_tidak_remidi/: menentukan_nilai_remidi_dan_tidak_remidi.cpp
basic/8_array/: README.md
basic/8_string/: README.md  gaya_c.cpp
basic/9_multidimensional_array/: README.md
basic/9_pointer/: README.md  pointer.cpp
basic/kondisional/: if.cpp  if_else.cpp  (+3 more)
design_patterns/: readme.md
design_patterns/singleton/: CMakeLists.txt  readme.md  singleton_another_example.cpp  singleton_basic.cpp  static_class_scope.cpp
design_patterns/singleton/static_file_scope/: another.cpp  main.cpp  readme.md
geometri/: CMakeLists.txt  graham_scan.cpp
geometri/include/: fungsi_graham.hpp
graf/: CMakeLists.txt  djikstra.cpp
math/: CMakeLists.txt  Linear_Regression.cpp  Regula_falsi.cpp  bisection.cpp  cek_faktorial.cpp  cek_prima.cpp  cos.cpp  deret_geometri.cpp  derivative.cpp  equation_linear.cpp  fast_power.cpp  fibonacci.cpp  frekuensi_harapan.cpp  ganjil_genap.cpp  gcd.cpp  lcm.cpp  least_square_method.cpp  linear_regression.cpp  mean_absolute_error.cpp  mean_absolute_percentage_error.cpp  mean_square_error.cpp  pronic  pronic.cpp  quadratic_formula.cpp  rabin_miller.cpp  radian.cpp  relu.cpp  s  sigmoid.cpp  statistik_deskritif.cpp  variance.cpp  volume.cpp  z_score.cpp
metode_numerik/: bisection.cpp
object_oriented_programming/: readme.md
sorting/: bubblesort.cpp  recursive_bubble_sort.cpp
strings/: CMakeLists.txt  boyer_moore.cpp
struktur_data/: README.md  binary_search_tree.cpp
validation/: numberValidation.cpp
(+41 files in other folders)
