set (CMAKE_CXX_STANDARD 11)
file( GLOB APP_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp )
foreach( testsourcefile ${APP_SOURCES} )
    string( REPLACE ".cpp" "" testname ${testsourcefile} )
    add_executable( ${testname} ${testsourcefile} )

    set_target_properties(${testname} PROPERTIES LINKER_LANGUAGE CXX)
    if(OpenMP_CXX_FOUND)
        target_link_libraries(${testname} OpenMP::OpenMP_CXX)
    endif()
    install(TARGETS ${testname} DESTINATION "bin/singleton")

endforeach( testsourcefile ${APP_SOURCES} )

file( GLOB FILE_SCOPE_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/static_file_scope/*.cpp" )
add_executable( "static_file_scope" ${FILE_SCOPE_SOURCES} )
set_target_properties( "static_file_scope" PROPERTIES LINKER_LANGUAGE CXX )
if(OpenMP_CXX_FOUND)
  target_link_libraries( "static_file_scope" OpenMP::OpenMP_CXX )
endif()
install( TARGETS "static_file_scope" DESTINATION "bin/singleton" )
